welcome.lessons.welcome.bat.bool2.CaughtSpeeding.scala.error
caughtSpeeding:2: error: '(' expected but identifier found.
  if isBirthday
     ^